<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.FichaMedicaActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center|left"
        tools:ignore="RtlHardcoded">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagemPerfilPac"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="129dp"
            android:layout_marginLeft="129dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/perfil"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="2dp" />

        <TextView
            android:id="@+id/textNomePac"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nome"
            android:textColor="@color/cinza_escuro"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="138dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/dataN"
            android:textColor="@color/cinza_escuro"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="354dp" />

        <TextView
            android:id="@+id/textDataPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="386dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/comorbidade"
            android:textColor="@color/cinza_escuro"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="354dp" />

        <TextView
            android:id="@+id/textComorbidadesPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="386dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/ficha"
            android:textColor="@color/cinza_escuro"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="354dp" />

        <TextView
            android:id="@+id/textFichaPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="386dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/anotacoes"
            android:textColor="@color/cinza_escuro"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="354dp" />

        <TextView
            android:id="@+id/textAnotacoesPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="386dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/dataA"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="354dp"
            android:textColor="@color/cinza_escuro" />

        <TextView
            android:id="@+id/textDataEntradaPac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="386dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerAlertasPaciente"
            android:layout_width="match_parent"
            android:layout_height="270dp" />
    </LinearLayout>

</LinearLayout>

</ScrollView>